; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/amlogic/aml8726/extr_aml8726_rtc.c_aml8726_rtc_send_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/amlogic/aml8726/extr_aml8726_rtc.c_aml8726_rtc_send_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aml8726_rtc_softc = type { i32 }

@AML_RTC_0_REG = common dso_local global i32 0, align 4
@AML_RTC_SDI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aml8726_rtc_softc*, i32)* @aml8726_rtc_send_bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aml8726_rtc_send_bit(%struct.aml8726_rtc_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.aml8726_rtc_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.aml8726_rtc_softc* %0, %struct.aml8726_rtc_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load %struct.aml8726_rtc_softc*, %struct.aml8726_rtc_softc** %3, align 8
  %9 = load i32, i32* @AML_RTC_0_REG, align 4
  %10 = load %struct.aml8726_rtc_softc*, %struct.aml8726_rtc_softc** %3, align 8
  %11 = load i32, i32* @AML_RTC_0_REG, align 4
  %12 = call i32 @CSR_READ_4(%struct.aml8726_rtc_softc* %10, i32 %11)
  %13 = load i32, i32* @AML_RTC_SDI, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @CSR_WRITE_4(%struct.aml8726_rtc_softc* %8, i32 %9, i32 %14)
  br label %26

16:                                               ; preds = %2
  %17 = load %struct.aml8726_rtc_softc*, %struct.aml8726_rtc_softc** %3, align 8
  %18 = load i32, i32* @AML_RTC_0_REG, align 4
  %19 = load %struct.aml8726_rtc_softc*, %struct.aml8726_rtc_softc** %3, align 8
  %20 = load i32, i32* @AML_RTC_0_REG, align 4
  %21 = call i32 @CSR_READ_4(%struct.aml8726_rtc_softc* %19, i32 %20)
  %22 = load i32, i32* @AML_RTC_SDI, align 4
  %23 = xor i32 %22, -1
  %24 = and i32 %21, %23
  %25 = call i32 @CSR_WRITE_4(%struct.aml8726_rtc_softc* %17, i32 %18, i32 %24)
  br label %26

26:                                               ; preds = %16, %7
  %27 = load %struct.aml8726_rtc_softc*, %struct.aml8726_rtc_softc** %3, align 8
  %28 = call i32 @aml8726_rtc_sclk_pulse(%struct.aml8726_rtc_softc* %27)
  ret void
}

declare dso_local i32 @CSR_WRITE_4(%struct.aml8726_rtc_softc*, i32, i32) #1

declare dso_local i32 @CSR_READ_4(%struct.aml8726_rtc_softc*, i32) #1

declare dso_local i32 @aml8726_rtc_sclk_pulse(%struct.aml8726_rtc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
